Finished Pair Programming

--- a/Week_1/1.2-python.ipynb
+++ b/Week_1/1.2-python.ipynb
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here to change protein\n"
+    "protein = \"ginger chicken\"\n"
    ]
   },
   {
@@ -86,10 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "oz_of_protein = 3.5\n",
     "# Code here to change oz_of_protein\n"
    ]
   },
@@ -108,10 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
+    "side1, side2, side3 = \"broccoli\", \"potatoes\", \"kimchi\"\n",
     "# Code here to change sides \n"
    ]
   },
@@ -124,11 +126,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "broccoli potatoes kimchi\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here to confirm your changes\n"
+    "print(side1, side2, side3)\n"
    ]
   },
   {
@@ -142,11 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "hide_input": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "type(side1)"
@@ -161,10 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "type(oz_of_protein)\n",
+    "type(main)\n",
     "# Code here to check other variable types\n"
    ]
   },
@@ -221,9 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no carbs, please!\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "if (main == 'rice'):\n",
@@ -245,26 +287,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Update the code below, based on your own preferences\n",
     "if (main == 'rice'):\n",
-    "    print(\"no carbs, please!\")\n",
+    "    great_bento = True\n",
     "elif(oz_of_protein >= 2.5):\n",
-    "    print(\"too much!\")\n",
+    "    great_bento = False\n",
     "else:\n",
-    "    print(\"I will like this bento box!\")"
+    "    great_bento = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Is great_bento True or False right now?\n"
+    "# Is great_bento True or False right now?\n",
+    "great_bento"
    ]
   },
   {
@@ -287,12 +341,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace None with relevant code\n",
-    "bento_ingredients = None"
+    "bento_ingredients = [side1, side2, side3, main, protein]\n"
    ]
   },
   {
@@ -304,11 +358,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ginger chicken'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "bento_ingredients[4]"
@@ -323,9 +388,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['kimchi', 'rice', 'ginger chicken']"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "# Note that our 3rd side is the 4th element above, but we use 5 in the range\n",
@@ -343,11 +419,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here to add to your list\n"
+    "# Code here to add to your list\n",
+    "bento_ingredients.append('seaweed')"
    ]
   },
   {
@@ -359,20 +436,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'seaweed'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here to test that out\n"
+    "# Code here to test that out\n",
+    "bento_ingredients.pop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['broccoli', 'potatoes', 'kimchi', 'rice', 'ginger chicken']"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Now check what your list looks like - is that last item still there?\n"
+    "# Now check what your list looks like - is that last item still there?\n",
+    "bento_ingredients"
    ]
   },
   {
@@ -384,9 +485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'd like my bento box to contain: broccoli, potatoes, kimchi, rice, and ginger chicken\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "print(\"I'd like my bento box to contain: \" +\n",
@@ -402,9 +511,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My bento box will include broccoli and potatoes.\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "# This is an f-string!\n",
@@ -413,9 +530,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My bento box will include broccoli and potatoes.\n"
+     ]
+    }
+   ],
    "source": [
     "# The above cell is the same as:\n",
     "print(\"My bento box will include {} and {}.\".format(bento_ingredients[0], bento_ingredients[1]))"
@@ -459,11 +584,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'main': 'rice', 'protein': 'tempura shrimp', 'side': 'miso soup'}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Here's an example of zipping two lists together to form a dictionary\n",
     "bento_keys = [\"main\", \"protein\", \"side\"]\n",
@@ -477,24 +611,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Code here to create a dictionary from your bento ingredients\n",
     "# Change things up to whatever you like!\n",
-    "bento_dict = None"
+    "b_keys = [\"main\", \"protein\", \"side 1\", \"side 2\", \"side 3\"]\n",
+    "b_values = [main, protein, side1, side2, side3]\n",
+    "b_dict = dict(zip(b_keys, b_values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'main': 'rice', 'protein': 'ginger chicken', 'side 1': 'broccoli', 'side 2': 'potatoes', 'side 3': 'kimchi'}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here to check your work - check type, and print your dictionary\n",
     "\n",
-    "\n"
+    "print(b_dict)\n",
+    "print(type(b_dict))\n"
    ]
   },
   {
@@ -506,11 +652,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ginger chicken'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Practice accessing elements in your bento box\n"
+    "# Practice accessing elements in your bento box\n",
+    "b_dict['protein']"
    ]
   },
   {
@@ -528,20 +686,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here to combine your group order\n"
+    "# Code here to combine your group order\n",
+    "bento_list =  [\n",
+    "                {\"main\" : \"rice\",\n",
+    "                \"protein\" : \"salmon\",\n",
+    "                \"oz_of_protein\" : 4.5,\n",
+    "                \"number_of_sides\" : 3,\n",
+    "                \"side1\" : 'seaweed',\n",
+    "                \"side2\" : 'onigiri',\n",
+    "                \"side3\" : 'turnip pickle',\n",
+    "                \"great_bento\" : True},\n",
+    "                {\"main\" : \"potatoes\",\n",
+    "                \"protein\" : \"tuna\",\n",
+    "                \"oz_of_protein\" : 3.5,\n",
+    "                \"number_of_sides\" : 3,\n",
+    "                \"side1\" : 'kimchi',\n",
+    "                \"side2\" : 'seaweed',\n",
+    "                \"side3\" : 'carrot',\n",
+    "                \"great_bento\" : True},\n",
+    "        \n",
+    "              ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'main': 'rice', 'protein': 'salmon', 'oz_of_protein': 4.5, 'number_of_sides': 3, 'side1': 'seaweed', 'side2': 'onigiri', 'side3': 'turnip pickle', 'great_bento': True}\n",
+      "{'main': 'potatoes', 'protein': 'tuna', 'oz_of_protein': 3.5, 'number_of_sides': 3, 'side1': 'kimchi', 'side2': 'seaweed', 'side3': 'carrot', 'great_bento': True}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here to check your work\n"
+    "# Code here to check your work\n",
+    "for box in bento_list:\n",
+    "        print(box)\n"
    ]
   },
   {
@@ -557,20 +745,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here to create your nested dictionaries\n"
+    "# Code here to create your nested dictionaries\n",
+    "d_dict = { \"Jack\" : {\"main\" : \"rice\",\n",
+    "                    \"protein\" : \"salmon\",\n",
+    "                    \"oz_of_protein\" : 4.5,\n",
+    "                    \"number_of_sides\" : 3,\n",
+    "                    \"side1\" : 'seaweed',\n",
+    "                    \"side2\" : 'onigiri',\n",
+    "                    \"side3\" : 'turnip pickle',\n",
+    "                    \"great_bento\" : True},\n",
+    "          \"Jill\" :  {\"main\" : \"potatoes\",\n",
+    "                    \"protein\" : \"tuna\",\n",
+    "                    \"oz_of_protein\" : 3.5,\n",
+    "                    \"number_of_sides\" : 3,\n",
+    "                    \"side1\" : 'kimchi',\n",
+    "                    \"side2\" : 'seaweed',\n",
+    "                    \"side3\" : 'carrot',\n",
+    "                    \"great_bento\" : True}}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack:\n",
+      " main: rice\n",
+      " protein: salmon\n",
+      " oz_of_protein: 4.5\n",
+      " number_of_sides: 3\n",
+      " side1: seaweed\n",
+      " side2: onigiri\n",
+      " side3: turnip pickle\n",
+      " great_bento: True\n",
+      "Jill:\n",
+      " main: potatoes\n",
+      " protein: tuna\n",
+      " oz_of_protein: 3.5\n",
+      " number_of_sides: 3\n",
+      " side1: kimchi\n",
+      " side2: seaweed\n",
+      " side3: carrot\n",
+      " great_bento: True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check your work\n"
+    "# Check your work\n",
+    "for person, order in d_dict.items():\n",
+    "    print(f\"{person}:\")\n",
+    "    for key, value in order.items():\n",
+    "        print(f\" {key}: {value}\")\n"
    ]
   },
   {
@@ -582,22 +815,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here to grab a list of who you have orders for\n"
+    "# Code here to grab a list of who you have orders for\n",
+    "name_list = []\n",
+    "for person in d_dict:\n",
+    "    name_list.append(person)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Jack', 'Jill']"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check your work\n"
+    "# Check your work\n",
+    "name_list"
    ]
   },
   {
@@ -617,11 +865,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack\n",
+      "rice\n",
+      "Jill\n",
+      "potatoes\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here to write a for loop that prints each main\n"
+    "# Code here to write a for loop that prints each main\n",
+    "for key, value in d_dict.items():\n",
+    "    print(key)\n",
+    "    print(value[\"main\"])"
    ]
   },
   {
@@ -639,21 +901,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here to create a list of tuples for each person and their protein\n"
+    "# Code here to create a list of tuples for each person and their protein\n",
+    "tuple = [ (\"Jack\", \"salmon\"), (\"Jill\", \"tuna\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Jack', 'salmon'), ('Jill', 'tuna')]"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code here to check your work\n",
-    "# Tuple list will look like [('person', 'protein'), ...]\n"
+    "# Tuple list will look like [('person', 'protein'), ...]\n",
+    "tuple"
    ]
   },
   {
@@ -662,16 +937,27 @@
    "source": [
     "Now, print each of your orders as readable sentences. \n",
     "\n",
-    "You can use `.join()` or f-strings or `.format()` - no wrong way to do it! You may even want to use nested for loops here!"
+    "You can use `.join()` or f-strings or `.format()` - no wrong way to do it! You may even want to use nested for loops here!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack likes salmon in their bento box\n",
+      "Jill likes tuna in their bento box\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here to print each order as a human-readable sentence\n"
+    "# Code here to print each order as a human-readable sentence\n",
+    "for person in tuple:\n",
+    "    print(f\"{person[0]} likes {person[1]} in their bento box\")"
    ]
   },
   {
@@ -684,6 +970,13 @@
     "\n",
     "- \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
