Pair Programming Functions and Loops

--- a/Week_1/1.1-python.ipynb
+++ b/Week_1/1.1-python.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +58,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I need to buy: cheese\n",
+      "I need to buy: whole milk\n",
+      "I need to buy: kefir\n",
+      "I need to buy: tofu four-pack\n",
+      "I need to buy: kale\n",
+      "I need to buy: oranges\n",
+      "I need to buy: ham\n",
+      "I need to buy: ben & jerry's\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your for loop\n"
+    "# Write your for loop\n",
+    "for item in items:\n",
+    "    print(f\"I need to buy: {item}\")"
    ]
   },
   {
@@ -78,21 +95,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace None with appropriate code to create your dictionary\n",
-    "grocery_dict = None"
+    "grocery_dict = dict(zip(items, cost))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cheese': 2.79,\n",
+       " 'whole milk': 3.42,\n",
+       " 'kefir': 4.5,\n",
+       " 'tofu four-pack': 12.0,\n",
+       " 'kale': 2.75,\n",
+       " 'oranges': 3.64,\n",
+       " 'ham': 25.0,\n",
+       " \"ben & jerry's\": 5.29}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check your work\n",
     "grocery_dict"
@@ -109,13 +144,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59.39"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculate your sum\n"
+    "# Calculate your sum\n",
+    "sum = sum(grocery_dict.values())\n",
+    "sum"
    ]
   },
   {
@@ -133,22 +181,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# Code here to only add items to our total if they're <$10\n"
+    "# Code here to only add items to our total if they're <$10\n",
+    "total = 0\n",
+    "for item, cost in grocery_dict.items():\n",
+    "    if cost < 10:\n",
+    "        total += cost\n",
+    "\n",
+    "\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.39"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check your work\n"
+    "# Check your work\n",
+    "total"
    ]
   },
   {
@@ -188,32 +255,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You may want to paste your previous for loop here\n"
+    "# You may want to paste your previous for loop here\n",
+    "total = 0\n",
+    "for item, cost in grocery_dict.items():\n",
+    "    if cost < 10:\n",
+    "        total += cost\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace pass with the appropriate code\n",
     "def calc_frugal_total(dictionary):\n",
+    "    total = 0\n",
+    "    for item, cost in grocery_dict.items():\n",
+    "        if cost < 10:\n",
+    "            total += cost\n",
+    "    return total\n",
     "    '''\n",
     "    Returns a frugal grocery list sum, that only includes items that cost less\n",
     "    than $10\n",
     "    \n",
     "    Input: dictionary (expects key is item name, value is item cost)\n",
     "    Output: sum (float)\n",
-    "    '''\n",
-    "    pass"
+    "    '''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.39"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes to check your work\n",
     "calc_frugal_total(grocery_dict)"
@@ -230,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,20 +344,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code to write your nested loops\n"
+    "# Code to write your nested loops\n",
+    "grocery_list = []\n",
+    "for category in shopping_dict.values():\n",
+    "    for grocery in category.keys():\n",
+    "        grocery_list.append(grocery)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"ben & jerry's\",\n",
+       " 'cheese',\n",
+       " 'ham',\n",
+       " 'kale',\n",
+       " 'kefir',\n",
+       " 'oranges',\n",
+       " 'tofu four-pack',\n",
+       " 'whole milk',\n",
+       " 'toilet paper pack',\n",
+       " 'clorox spray',\n",
+       " 'kleenex',\n",
+       " 'fancy grain-free kibble',\n",
+       " 'squeaky toy',\n",
+       " 'treats']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check your work\n"
+    "# Check your work\n",
+    "grocery_list"
    ]
   },
   {
@@ -285,20 +401,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace pass with appropriate code\n",
     "def write_grocery_list(nested_dict):\n",
-    "    pass"
+    "    grocery_list2 = []\n",
+    "    for category in nested_dict.values():\n",
+    "        for grocery in category.keys():\n",
+    "            grocery_list2.append(grocery)\n",
+    "    return grocery_list2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"ben & jerry's\",\n",
+       " 'cheese',\n",
+       " 'ham',\n",
+       " 'kale',\n",
+       " 'kefir',\n",
+       " 'oranges',\n",
+       " 'tofu four-pack',\n",
+       " 'whole milk',\n",
+       " 'toilet paper pack',\n",
+       " 'clorox spray',\n",
+       " 'kleenex',\n",
+       " 'fancy grain-free kibble',\n",
+       " 'squeaky toy',\n",
+       " 'treats']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes to check your work\n",
     "write_grocery_list(shopping_dict)"
@@ -329,28 +473,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code your leveled-up function here\n"
+    "# Code your leveled-up function here\n",
+    "def levelup_grocery_list(nested_dict):\n",
+    "    flagged_groceries = []\n",
+    "    total = 0\n",
+    "    grocery_list3 = []\n",
+    "    for category in nested_dict.values():\n",
+    "        for grocery, cost in category.items():\n",
+    "            if cost > 20:\n",
+    "                flagged_groceries.append(grocery)\n",
+    "            elif total + cost > 50:\n",
+    "                continue\n",
+    "            else:\n",
+    "                grocery_list3.append(grocery)\n",
+    "                total += cost\n",
+    "    print(\"average cost: \" + str(total/len(grocery_list3)))\n",
+    "        \n",
+    "    return grocery_list3, flagged_groceries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average cost4.782\n",
+      "Grocery List: [\"ben & jerry's\", 'cheese', 'kale', 'kefir', 'oranges', 'tofu four-pack', 'whole milk', 'clorox spray', 'kleenex', 'squeaky toy']\n",
+      "Flagged List: ['ham', 'fancy grain-free kibble']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check your work\n",
+    "groc_list, flag_list = levelup_grocery_list(shopping_dict)\n",
+    "print(\"Grocery List: \" + str(groc_list))\n",
+    "print(\"Flagged List: \" + str(flag_list))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# Check your work\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -364,9 +542,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
