--- a/Week_1/1.1-python.ipynb
+++ b/Week_1/1.1-python.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,21 +491,30 @@
     "            else:\n",
     "                grocery_list3.append(grocery)\n",
     "                total += cost\n",
-    "    print(\"average cost: \" + str(total/len(grocery_list3)))\n",
+    "    print(\"average cost:  \" + str(total/len(grocery_list3)))\n",
     "        \n",
-    "    return grocery_list3, flagged_groceries"
+    "    return grocery_list3, flagged_groceries\n",
+    "\n",
+    "    '''\n",
+    "    \n",
+    "    \n",
+    "    Input: dictionary (expects key is grocery category name, value is  the items in specific category)\n",
+    "    Output: Returns a average cost of items in a grocery list  \n",
+    "            Grocery List\n",
+    "            Flagged Groceries that are too expensive for the list\n",
+    "    '''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average cost4.782\n",
+      "average cost:  4.782\n",
       "Grocery List: [\"ben & jerry's\", 'cheese', 'kale', 'kefir', 'oranges', 'tofu four-pack', 'whole milk', 'clorox spray', 'kleenex', 'squeaky toy']\n",
       "Flagged List: ['ham', 'fancy grain-free kibble']\n"
      ]
