--- a/Week_2/2.3-sql.ipynb
+++ b/Week_2/2.3-sql.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,82 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>productLine</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Classic Cars</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Motorcycles</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Planes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ships</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Trains</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Trucks and Buses</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Vintage Cars</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        productLine\n",
-       "0      Classic Cars\n",
-       "1       Motorcycles\n",
-       "2            Planes\n",
-       "3             Ships\n",
-       "4            Trains\n",
-       "5  Trucks and Buses\n",
-       "6      Vintage Cars"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "q0 = \"\"\"\n",
     "SELECT productline\n",
@@ -199,153 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>contactFirstName</th>\n",
-       "      <th>contactLastName</th>\n",
-       "      <th>phone</th>\n",
-       "      <th>addressLine1</th>\n",
-       "      <th>creditLimit</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Susan</td>\n",
-       "      <td>Nelson</td>\n",
-       "      <td>4155551450</td>\n",
-       "      <td>5677 Strong St.</td>\n",
-       "      <td>210500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Julie</td>\n",
-       "      <td>Murphy</td>\n",
-       "      <td>6505555787</td>\n",
-       "      <td>5557 North Pendale Street</td>\n",
-       "      <td>64600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Juri</td>\n",
-       "      <td>Hashimoto</td>\n",
-       "      <td>6505556809</td>\n",
-       "      <td>9408 Furth Circle</td>\n",
-       "      <td>84600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Julie</td>\n",
-       "      <td>Young</td>\n",
-       "      <td>6265557265</td>\n",
-       "      <td>78934 Hillside Dr.</td>\n",
-       "      <td>90700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Valarie</td>\n",
-       "      <td>Thompson</td>\n",
-       "      <td>7605558146</td>\n",
-       "      <td>361 Furth Circle</td>\n",
-       "      <td>105000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Julie</td>\n",
-       "      <td>Brown</td>\n",
-       "      <td>6505551386</td>\n",
-       "      <td>7734 Strong St.</td>\n",
-       "      <td>105000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Brian</td>\n",
-       "      <td>Chandler</td>\n",
-       "      <td>2155554369</td>\n",
-       "      <td>6047 Douglas Av.</td>\n",
-       "      <td>57700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Sue</td>\n",
-       "      <td>Frick</td>\n",
-       "      <td>4085553659</td>\n",
-       "      <td>3086 Ingle Ln.</td>\n",
-       "      <td>77600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Steve</td>\n",
-       "      <td>Thompson</td>\n",
-       "      <td>3105553722</td>\n",
-       "      <td>3675 Furth Circle</td>\n",
-       "      <td>55400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Sue</td>\n",
-       "      <td>Taylor</td>\n",
-       "      <td>4155554312</td>\n",
-       "      <td>2793 Furth Circle</td>\n",
-       "      <td>60300</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  contactFirstName contactLastName       phone               addressLine1  \\\n",
-       "0            Susan          Nelson  4155551450            5677 Strong St.   \n",
-       "1            Julie          Murphy  6505555787  5557 North Pendale Street   \n",
-       "2             Juri       Hashimoto  6505556809          9408 Furth Circle   \n",
-       "3            Julie           Young  6265557265         78934 Hillside Dr.   \n",
-       "4          Valarie        Thompson  7605558146           361 Furth Circle   \n",
-       "5            Julie           Brown  6505551386            7734 Strong St.   \n",
-       "6            Brian        Chandler  2155554369           6047 Douglas Av.   \n",
-       "7              Sue           Frick  4085553659             3086 Ingle Ln.   \n",
-       "8            Steve        Thompson  3105553722          3675 Furth Circle   \n",
-       "9              Sue          Taylor  4155554312          2793 Furth Circle   \n",
-       "\n",
-       "   creditLimit  \n",
-       "0       210500  \n",
-       "1        64600  \n",
-       "2        84600  \n",
-       "3        90700  \n",
-       "4       105000  \n",
-       "5       105000  \n",
-       "6        57700  \n",
-       "7        77600  \n",
-       "8        55400  \n",
-       "9        60300  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "q1 = \"\"\"\n",
     "SELECT\n",
@@ -1834,7 +1617,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1848,9 +1631,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
