Completed Pair Programming

--- a/Module_1/5.1-data-pipelines.ipynb
+++ b/Module_1/5.1-data-pipelines.ipynb
@@ -55,7 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your solution"
+    "# your solution\n",
+    "# Electricty, labor hours, preventative maintenance, maintenance, utilities, rental cost (assuming center is rented), hardware"
    ]
   },
   {
@@ -73,7 +74,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your solution, but be creative! It doesn't have to limit to the requirement from the problem statement"
+    "# your solution, but be creative! It doesn't have to limit to the requirement from the problem statement\n",
+    "\"\"\" Multiple engines, \n",
+    "easy accessibility for all users\n",
+    "clean UX/UI,\n",
+    "enhanced computing power,\n",
+    "limit preventative maintenance,\n",
+    "AI assisstance,\n",
+    "internal algo for recommendations for personal user interaction,\n",
+    "succinct crossover of information from team to team,\n",
+    "strong security precautions,\n",
+    "fraud prevention,\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -91,7 +103,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your solution"
+    "# your solution\n",
+    "\"\"\"\n",
+    "cybersecurity,\n",
+    "    data leak prevention,\n",
+    "amount of data and what data for transfer\n",
+    "any confidential data to protect before\n",
+    "difference in code \n",
+    "how long it takes to migrate\n",
+    "will it affect current systems\n",
+    "any code flaws (bad code)\n",
+    "ease of use for other teams\n",
+    "\"\"\"\"\n"
    ]
   },
   {
@@ -109,7 +132,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your solution"
+    "# your solution\n",
+    "\"\"\"\n",
+    "Pros: \n",
+    " - can be cheaper\n",
+    " - can allow for easier crossover between teams\n",
+    "- can reduce human involvement\n",
+    "- reduces in-person maintenance\n",
+    " Cons:\n",
+    " - greater risk for cyber issues\n",
+    " - greater risk for information loss\n",
+    " - can be hard for teams to transition\n",
+    " - training cost will go up\n",
+    " \"\"\""
    ]
   },
   {
@@ -155,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
